Fixed dialog modal default not showing

--- a/docs/_assets/scss/demo.scss
+++ b/docs/_assets/scss/demo.scss
@@ -1,4 +1,4 @@
-.sv-demo__modal--default {
+div.sv-demo__modal--default {
    border-color: #e5e5e5 #eeeeee #eeeeee;
    border-style: solid;
    border-width: 1px 0;
